testdata/baselines/reference/submodule/compiler/cloduleWithPriorUninstantiatedModule.errors.txt
cloduleWithPriorUninstantiatedModule.ts(2,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.


==== cloduleWithPriorUninstantiatedModule.ts (1 errors) ====
    // Non-ambient & uninstantiated module.
    module Moclodule {
           ~~~~~~~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
        export interface Someinterface {
            foo(): void;
        }
    }
    
    class Moclodule {
    }
    
    // Instantiated module.
    module Moclodule {
        export class Manager {
        }
    }